--- a/assets/blocks/b-quote.sass
+++ b/assets/blocks/b-quote.sass
@@ -9,13 +9,17 @@
   color: var(--color-text-primary)
 
   .quoteable
-    margin: 0 0 .5rem
-    line-height: 20px
+    padding: 0 0 6px
+    margin: 0;
+    line-height: 24px
 
+    @extend %material-icons
     &::before
-      float: left
-      margin-right: 8px
-      color: var(--color-text-hint)
+      content: 'format_quote'
+      float: right
+      margin: 0 0 0 8px
+      color: var(--color-text-disabled)
+      top: 0 // override
 
     a
       padding-right: 0
