--- a/assets/blocks/b-shiki_editor.sass
+++ b/assets/blocks/b-shiki_editor.sass
@@ -133,6 +133,7 @@
       @extend %md-button-flat
 
     .about-bb_codes
+      flex-basis: auto
       position: relative
       padding: .5rem
       margin: .25rem 0 .25rem auto
