--- a/assets/version.sass
+++ b/assets/version.sass
@@ -1,3 +1,3 @@
 // SETTINGS
-$ver: '1.6.36'
+$ver: '1.6.40'
 $release: 'stable'
